a)  新增原生Node JS 方式Less CSS 编译器实现 		说明：尽管之前的SDK中采用异步地方式来编译Less成CSS，不过由于JVM模拟的JS执行环境工作效率不高，因此采用原生Node JS方式的编译。 		经过在Intel i7 3770中测试，编译Less CSS官方的benchmark文件，大小为95KB。老编译器执行消耗时间为：7000-8000ms之间。 		新的时间缩短到：250-300ms，并且消耗更少的内存空间。 		特别提醒： 			针对Windows用户，SDK自带Node JS程序，用户无需关心CPU架构，SDK将会自动识别选择适合的程序。 			如果想体验新功能的Windows用户，请启动:NewStartServer.bat。如果想继续使用老编译器的用户，可以选择启动：StartServer.bat。 			为了减少SDK软件的大小，非Windows用户暂时没有提供Node JS程序。 			不过，SDK会自动探测到操作系统中是否安装了Node JS程序。如果自检成功的话，将会激活Node JS功能，同时，控制台Console中将有文字提示：“[提示] Node JS 功能激活！” 			在某种情况下，如果新Less CSS编译器不工作的话，SDK将会自动切换到老的编译器，保证程序运行良好。
	b)  新增Node JS 静态文件Web服务器（仅支持Windows操作系统）
		说明：尽最大可能地提高并发处理请求能力和减少SDK图片等静态文件请求响应时间，SDK开发工具中，提供了Node JS方式实现的静态文件Web服务器。
		使用前提：Node JS功能激活
		如果启动成功后，控制台Console中将会有文字提示：
		[提示] Node JS 功能激活！
		[提示] Node JS 静态服务器[根目录路径：D:\TAE_SDK\htdocs，端口：9999]已经启动！
		注意事项：
			1. 如果想体验新功能的Windows用户，请启动:NewStartServer.bat。如果想继续使用老编译器的用户，可以选择启动：StartServer.bat。	
			2. 该功能仅在Windows操作系统测试通过，目前已知的Bug：非Windows系统可能出现底层IO图片无法访问的问题。
			3. 如果Node JS服务器非正常原因当机，SDK将会自动切换回JVM实现的静态文件Web服务器。
			   在这种情况下，如果极少数情况下，会有少量图片丢失，不要担心，再次刷新页面即可。
			4. 在关闭SDK主程序后，请自行关闭node-xxx.exe的进程，避免资源的浪费。（未来SDK将会考虑自动杀死Node进程）。	
			
	c)  为TAE应用添加安全JS编译功能
		说明：当JS文件example.js被修改后，SDK将采用异步编译的方法，对其编译。
			  如果编译成功，会生成名为example.js.caja的文件，并且会备份上一次的文件内容，如果存在的话。
			  若编译失败，会错误提示文件：example.js.error.log文件，其文件内容为错误提示。待下一次成功编译后，删除该错误日志文件。
		
	d)  为TAE应用添加淘宝头尾页面内容